# graphics101-pipeline

./: .gitignore  CMakeLists-zip.txt  CMakeLists.txt  README.md  TODO.txt  camera.cpp  camera.h  drawable.h  filewatcher.h  filewatcherqt.cpp  filewatcherqt.h  glcompat.h  glgui.cpp  glgui.h  glscene.cpp  glscene.h  glsimplescene.cpp  glsimplescene.h  main.cpp  mainwindow.cpp  mainwindow.h  mesh.cpp  mesh.h  parsing.cpp  parsing.h  pipeline.pro  shaderprogram.cpp  shaderprogram.h  simplegui.cpp  texture.cpp  texture.h  types.h  vao.cpp
docs/: tangent_space_normal_and_bump_mapping.tex  tex
docs/eqs/: reflection.key
docs/figures/: mesh.ai
examples/: bake.fs  bake.json  bake.vs  bake_a_tangent_space_normal_map.txt  bake_object_space_normalmap_as_tangentspace_normalmap.fs  bake_object_space_normalmap_as_tangentspace_normalmap.json  bake_tangentspace.json  bake_tangentspace.vs  bake_tangentspace_normalmap_as_object_space_normalmap.fs  bake_tangentspace_normalmap_as_object_space_normalmap.json  bake_vertex_normals_as_object_space_normalmap.json  bone.fs  bone.vs  cel.fs  cel_bunny.json  cel_sphere.json  glgui.json  how_to_make_a_tangent_space_normal_map.txt  matcap.fs  matcap_bunny.json  matcap_head.json  matcap_head_uniforms.json  matcap_hercules.json  matcap_hercules_uniforms.json  matcap_lemon.json  matcap_lemon_uniforms.json  matcap_sphere.json  minimal.fs  minimal.json  minimal.vs  normalmap.fs  normalmap.vs  normalmap_cube.json  normalmap_cube_uniforms.json  normalmap_head.json  normalmap_head_uniforms.json  normalmap_hercules_bronze.json  normalmap_hercules_bronze_uniforms.json  normalmap_hercules_marble.json  normalmap_hercules_marble_uniforms.json  (+14 more)
examples/matcaps/: index.txt
examples/yokohama/: yokohama.txt
src/: CMakeLists.txt  animation.cpp  animation.h  animation_parser.cpp  camera.cpp  debugging.h  dialogs.cpp  dialogs.h  drawable.cpp  fancyscene.cpp  fancyscene.h  filewatcher.h  filewatchermtime.cpp  filewatchermtime.h  filewatcherqt.h  glfwd.h  kinematics.cpp  kinematics.h  kinematics_visualizer.cpp  kinematics_visualizer.h  main.cpp  mainwindow.cpp  mainwindow.h  mesh.cpp  mesh.h  parsing.cpp  parsing.h  pipelineguifactory.cpp  pipelineguifactory.h  pythonlike.h  shaderprogram.cpp  shaderprogram.h  simplegui.h  simplescene.cpp  simplescene.h  types.h  vao.cpp  vao.h  weights.h
